<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lgsvl_bridge_galactic</name>
  <version>0.2.1</version>
  <description>LGSVL Simulator Bridge</description>
  <maintainer email="martins.mozeiko@lge.com">Martins Mozeiko</maintainer>
  <maintainer email="hadi.tabatabaee@lge.com">Hadi Tabatabaee</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rcutils</depend>
  <depend>rcl</depend>
  <depend>boost</depend>
  <depend>ament_cmake</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>lgsvl_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
